css/_layout.scss
.l-container {
  display: block;
  margin: 0 auto;
  max-width: $layout-max-width + 40px;
  padding: 0 20px;
}

// GRID
.l-row {
  @include flex-grid-row(nest, expand, null, false, $grid-column-gutter);
}

.row {
  width: 100%;
  max-width: 100%;
}

.l-page {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  background: $color-bg-dark;

  &.-fullscreen {
    height: 100vh;
  }
}

.l-main {
  display: flex;
  flex-direction: column;
  flex: 1;
}

.l-sidebar {
  display: flex;
  flex-direction: column;

  .l-sidebar-content {
    position: relative;
    height: 100%;
    display: flex;
    flex-direction: column;
    overflow-y: auto;
  }
}

